--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,37 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.js"
+    ></script>
   </head>
 
   <body>
     <div class="ui small inverted menu">
       <div class="ui container">
-        <%= render 'layouts/navigation' %>
+        <%= render "layouts/navigation" %>
       </div>
     </div>
     <div class="ui container">
+      <% render "layouts/messages" %>
+      <% if flash[:error] %>
+        <div class="ui error message">
+          <i class="close icon"></i>
+          <%= flash[:error] %>
+        </div>
+      <% end %>
+
+      <% if flash[:success] %>
+        <div class="ui success message">
+          <i class="close icon"></i>
+          <%= flash[:success] %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
